--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <a class="link-button" target="_blank" href="https://www.facebook.com/RedomDuttaIT">HIRE ME</a>
         </div>
         <div class="half-width">
-  <img src="images/redomdutta2.png" alt="">
+  <img src="images/redomdutta2.png" alt=""/>
         </div>
     </section>
 	
     <section class="dream-area">
         <div class="half-width">
 		
-    <img src="images/redomdutta1.png" alt="">
+    <img src="images/redomdutta1.png" alt=""/>
         </div>
 		
         <div class="half-width">
