--- a/index.html
+++ b/index.html
@@ -137,9 +137,14 @@
 	<center>Stay Connected</center>
 
     <footer>
+	    
       
 	  <p>© Redom Dutta 2021, all rights reserved.</p>
-		
+			<center>
+	<a href="https://twitter.com/minimalmonkey" class="icon-button twitter"><i class="icon-twitter"></i><span></span></a>
+<a href="https://facebook.com" class="icon-button facebook"><i class="icon-facebook"></i><span></span></a>
+<a href="https://plus.google.com" class="icon-button google-plus"><i class="icon-google-plus"></i><span></span></a>
+</center>
 		
 		
     </footer>
